--- a/ansible/playbooks/cluster-formation.yml
+++ b/ansible/playbooks/cluster-formation.yml
@@ -355,14 +355,11 @@
             msg: "{{ final_node_status.stdout }}"
 
 
-# ===== NEW PLAY: Add Proxmox Nodes' SSH Keys to QDevice =====
+# ===== PLAY: Deploy Proxmox Nodes' SSH Keys to QDevice =====
 - name: Deploy Proxmox SSH Keys to QDevice
-  hosts: proxmox_cluster_members
+  hosts: qdevice
   become: true
   gather_facts: true
-
-  vars:
-    qdevice_ip: "192.168.1.164"  # Your Raspberry Pi
 
   tasks:
     - name: Display QDevice SSH setup plan
@@ -370,50 +367,113 @@
         msg: |
           QDevice SSH Access Setup
           ========================
-          QDevice: {{ qdevice_ip }}
-          Source Node: {{ inventory_hostname }}
+          QDevice: {{ inventory_hostname }}
 
-          This will deploy {{ inventory_hostname }}'s root SSH key to QDevice
+          This will fetch and deploy all Proxmox nodes' public keys to this QDevice
 
-    - name: Ensure root SSH key exists on this node
-      ansible.builtin.stat:
-        path: /root/.ssh/id_rsa.pub
-      register: node_ssh_key
+    - name: Ensure root .ssh directory exists
+      ansible.builtin.file:
+        path: /root/.ssh
+        state: directory
+        mode: '0700'
+        owner: root
+        group: root
 
-    - name: Fail if SSH key is missing
-      ansible.builtin.fail:
-        msg: "Root SSH key missing on {{ inventory_hostname }}. Run SSH trust play first."
-      when: not node_ssh_key.stat.exists
-
-    - name: Read root's public key
+    - name: Fetch public keys from all Proxmox nodes
       ansible.builtin.slurp:
         src: /root/.ssh/id_rsa.pub
-      register: root_public_key_raw
+      register: proxmox_public_keys
+      delegate_to: "{{ item }}"
+      loop: "{{ groups['proxmox_cluster_members'] }}"
+      loop_control:
+        label: "Fetching key from {{ item }}"
 
-    - name: Extract public key content
-      ansible.builtin.set_fact:
-        root_public_key: "{{ root_public_key_raw.content | b64decode | trim }}"
+    - name: Display fetched keys
+      ansible.builtin.debug:
+        msg: |
+          Fetched key from {{ item.item }}:
+          {{ item.content | b64decode | trim | truncate(80) }}...
+      loop: "{{ proxmox_public_keys.results }}"
+      loop_control:
+        label: "{{ item.item }}"
 
-    - name: Deploy this node's public key to QDevice
-      ansible.posix.authorized_key:
-        user: root
+    - name: Initialize authorized_keys file
+      ansible.builtin.file:
+        path: /root/.ssh/authorized_keys
+        state: touch
+        mode: '0600'
+        owner: root
+        group: root
+
+    - name: Deploy each Proxmox node's public key to QDevice authorized_keys
+      ansible.builtin.lineinfile:
+        path: /root/.ssh/authorized_keys
+        line: "{{ item.content | b64decode | trim }}"
         state: present
-        key: "{{ root_public_key }}"
-        comment: "SSH key from {{ inventory_hostname }}"
-      delegate_to: "{{ qdevice_ip }}"
-      vars:
-        ansible_user: ansible
-      become: true
+      loop: "{{ proxmox_public_keys.results }}"
+      loop_control:
+        label: "Adding key from {{ item.item }}"
+      register: key_add_result
 
-    - name: Test SSH connectivity to QDevice (non-interactive)
-      ansible.builtin.command: "ssh -o BatchMode=yes -o StrictHostKeyChecking=no root@{{ qdevice_ip }} hostname"
+    - name: Display key addition results
+      ansible.builtin.debug:
+        msg: |
+          Node: {{ item.item }}
+          Changed: {{ item.changed }}
+      loop: "{{ key_add_result.results }}"
+      loop_control:
+        label: "{{ item.item }}"
+
+    - name: Verify all keys in authorized_keys
+      ansible.builtin.shell: cat /root/.ssh/authorized_keys | wc -l
+      register: key_count
+      changed_when: false
+
+    - name: Display final key count
+      ansible.builtin.debug:
+        msg: |
+          authorized_keys now contains {{ key_count.stdout }} lines.
+          Expected: {{ groups['proxmox_cluster_members'] | length }} keys
+
+    - name: Show authorized_keys content
+      ansible.builtin.shell: cat /root/.ssh/authorized_keys
+      register: auth_keys_content
+      changed_when: false
+
+    - name: Display authorized_keys
+      ansible.builtin.debug:
+        msg: |
+          Current authorized_keys:
+          {{ auth_keys_content.stdout }}
+
+    - name: Test SSH connectivity from each Proxmox node
+      ansible.builtin.command: "ssh -o BatchMode=yes -o StrictHostKeyChecking=no root@{{ ansible_host }} hostname"
       register: qdevice_ssh_test
+      delegate_to: "{{ item }}"
+      vars:
+        ansible_user: root
+      loop: "{{ groups['proxmox_cluster_members'] }}"
+      loop_control:
+        label: "Testing {{ item }} → QDevice"
       changed_when: false
       failed_when: qdevice_ssh_test.rc != 0
 
-    - name: Display QDevice SSH test result
+    - name: Display SSH test results
       ansible.builtin.debug:
-        msg: "✓ {{ inventory_hostname }} can SSH to QDevice: {{ qdevice_ssh_test.stdout }}"
+        msg: "✓ {{ item.item }} can SSH to QDevice: {{ item.stdout }}"
+      loop: "{{ qdevice_ssh_test.results }}"
+      loop_control:
+        label: "{{ item.item }}"
+
+    - name: Display completion message
+      ansible.builtin.debug:
+        msg: |
+
+          ✓ QDevice SSH Access Fully Configured!
+          ======================================
+
+          All {{ groups['proxmox_cluster_all'] | length }} Proxmox nodes can now SSH to QDevice.
+          Ready for: pvecm qdevice setup
 
 # PLAY 4: Add QDevice (ONLY AFTER 2+ NODES)
 - name: Configure QDevice
