--- a/ansible/playbooks/cluster-formation.yml
+++ b/ansible/playbooks/cluster-formation.yml
@@ -447,7 +447,7 @@
           {{ auth_keys_content.stdout }}
 
     - name: Test SSH connectivity from each Proxmox node
-      ansible.builtin.command: "ssh -o BatchMode=yes -o StrictHostKeyChecking=no root@{{ ansible_host }} hostname"
+      ansible.builtin.command: "ssh -o BatchMode=yes -o StrictHostKeyChecking=no root@{{ inventory_hostname }} hostname"
       register: qdevice_ssh_test
       delegate_to: "{{ item }}"
       vars:
