--- a/ansible/playbooks/cluster-formation.yml
+++ b/ansible/playbooks/cluster-formation.yml
@@ -447,11 +447,11 @@
           {{ auth_keys_content.stdout }}
 
     - name: Test SSH connectivity from each Proxmox node
-      ansible.builtin.command: "ssh -o BatchMode=yes -o StrictHostKeyChecking=no root@192.168.1.164 hostname"
+      ansible.builtin.command: "sudo ssh -o BatchMode=yes -o StrictHostKeyChecking=no root@192.168.1.164 hostname"
       register: qdevice_ssh_test
       delegate_to: "{{ item }}"
       vars:
-        ansible_user: root
+        ansible_user: ansible
       loop: "{{ groups['proxmox_cluster_members'] }}"
       loop_control:
         label: "Testing {{ item }} → QDevice"
